@@ -1,3 +1,10 @@
+2008-01-12  Srinivasa Ragavan  <sragavan@novell.com>
+
+	** Fix for bug #501567
+
+	* addressbook/e-book-backend-gal.c: (build_query): If unsupported
+	queries, Don't crash.
+
 2007-12-23  Martin Meyer  <elreydetodo@gmail.com>
 
 	** Fix for bug #503356
